# google-cloud-rust

auth/: Cargo.toml
auth/src/: lib.rs  oauth2.rs  source.rs
