[package]
name = "google-cloud-auth"
version = "0.1.0"
authors = ["Google LLC"]
description = "An auth library for Cloud Google APIs."
license = "Apache-2.0"
repository = "https://github.com/googleapis/google-cloud-rust/tree/main/auth"
keywords = ["auth", "google", "google-cloud"]
categories = ["authentication", "web-programming"]
edition = "2021"

[dependencies]
async-trait = "0.1"
backoff = { version = "0.4", features = ["tokio"] }
base64 = "0.22"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = "0.23"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full", "macros"] }
